// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextContainer#calculateSpans(number) 1`] = `
Array [
  Span {
    "container": TextContainer {
      "calculateSpans": [Function],
      "exclusions": Array [],
      "height": 100,
      "spans": [Circular],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 15,
    },
    "start": Point {
      "x": 0,
      "y": 15,
    },
  },
  Span {
    "container": TextContainer {
      "calculateSpans": [Function],
      "exclusions": Array [],
      "height": 100,
      "spans": [Circular],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 45,
    },
    "start": Point {
      "x": 0,
      "y": 45,
    },
  },
  Span {
    "container": TextContainer {
      "calculateSpans": [Function],
      "exclusions": Array [],
      "height": 100,
      "spans": [Circular],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 75,
    },
    "start": Point {
      "x": 0,
      "y": 75,
    },
  },
]
`;

exports[`TextContainer#calculateSpans(number) 2`] = `
Array [
  Span {
    "container": TextContainer {
      "calculateSpans": [Function],
      "exclusions": Array [],
      "height": 100,
      "spans": [Circular],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 15,
    },
    "start": Point {
      "x": 0,
      "y": 15,
    },
  },
  Span {
    "container": TextContainer {
      "calculateSpans": [Function],
      "exclusions": Array [],
      "height": 100,
      "spans": [Circular],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 45,
    },
    "start": Point {
      "x": 0,
      "y": 45,
    },
  },
  Span {
    "container": TextContainer {
      "calculateSpans": [Function],
      "exclusions": Array [],
      "height": 100,
      "spans": [Circular],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 75,
    },
    "start": Point {
      "x": 0,
      "y": 75,
    },
  },
]
`;

exports[`TextContainer(exclusions)#calculateSpans(number) 1`] = `
Array [
  Span {
    "container": TextContainer {
      "calculateSpans": [Function],
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
      ],
      "height": 100,
      "spans": [Circular],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 15,
    },
    "start": Point {
      "x": 50,
      "y": 15,
    },
  },
  Span {
    "container": TextContainer {
      "calculateSpans": [Function],
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
      ],
      "height": 100,
      "spans": [Circular],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 45,
    },
    "start": Point {
      "x": 50,
      "y": 45,
    },
  },
  Span {
    "container": TextContainer {
      "calculateSpans": [Function],
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
      ],
      "height": 100,
      "spans": [Circular],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 75,
    },
    "start": Point {
      "x": 0,
      "y": 75,
    },
  },
]
`;

exports[`TextContainer(exclusions)#calculateSpans(number) 2`] = `
Array [
  Span {
    "container": TextContainer {
      "calculateSpans": [Function],
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 100,
          "y": 0,
        },
      ],
      "height": 100,
      "spans": [Circular],
      "width": 200,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 99,
      "y": 15,
    },
    "start": Point {
      "x": 50,
      "y": 15,
    },
  },
  Span {
    "container": TextContainer {
      "calculateSpans": [Function],
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 100,
          "y": 0,
        },
      ],
      "height": 100,
      "spans": [Circular],
      "width": 200,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 200,
      "y": 15,
    },
    "start": Point {
      "x": 150,
      "y": 15,
    },
  },
  Span {
    "container": TextContainer {
      "calculateSpans": [Function],
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 100,
          "y": 0,
        },
      ],
      "height": 100,
      "spans": [Circular],
      "width": 200,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 99,
      "y": 45,
    },
    "start": Point {
      "x": 50,
      "y": 45,
    },
  },
  Span {
    "container": TextContainer {
      "calculateSpans": [Function],
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 100,
          "y": 0,
        },
      ],
      "height": 100,
      "spans": [Circular],
      "width": 200,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 200,
      "y": 45,
    },
    "start": Point {
      "x": 150,
      "y": 45,
    },
  },
  Span {
    "container": TextContainer {
      "calculateSpans": [Function],
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 100,
          "y": 0,
        },
      ],
      "height": 100,
      "spans": [Circular],
      "width": 200,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 200,
      "y": 75,
    },
    "start": Point {
      "x": 0,
      "y": 75,
    },
  },
]
`;
